<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/back"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewSkype"
        android:layout_width="311dp"
        android:layout_height="147dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="36dp"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_below="@+id/imageViewSkype"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:gravity="center"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSkype" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_below="@+id/editTextUser"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:gravity="center"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUser" />


    <RadioGroup

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPass">

        <RadioButton
            android:id="@+id/rbRememberMe"
            android:background="#FFFFFF"
            android:defaultFocusHighlightEnabled="false"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="Remember Me"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPass" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="Login"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewRegisterLogin"
        android:layout_width="178dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="64dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="Register Here"
        android:textColor="#c0ffff"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />

    <TextView
        android:id="@+id/textViewForgot"
        android:layout_width="178dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="Forgot Password"
        android:textColor="#c0ffff"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>