<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black"
    android:enabled="true"
        android:title="Home"/>

    <item android:id="@+id/nav_profile"
        android:icon="@drawable/ic_request_black"
        android:title="Profile"/>

<!--    <item android:id="@+id/nav_notification"-->
<!--        android:icon="@drawable/ic_notification_black"-->
<!--        android:title="Notification"/>-->

    <item android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_black"
        android:title="Search"/>

    <item android:id="@+id/nav_more"
        android:icon="@drawable/ic_more_black"
        android:title="More"/>

</menu>